--- a/muensterdiscovery/src/i18n/it.json
+++ b/muensterdiscovery/src/i18n/it.json
@@ -304,7 +304,30 @@
     "route.4": "Se sei interessato all'architettura, questo percorso combina edifici storici con architettura moderna e ti mostra come le diverse epoche abbiano plasmato il paesaggio urbano di Münster.",
     "route.5": "Popolare e vivace: il quartiere Kreuzviertel combina cultura residenziale, storia e architettura. Questo percorso ti mostra strade e luoghi speciali che definiscono il carattere del quartiere.",
     "route.6": "Che sia uno sfondo per una scena del crimine o un meme su internet – questo percorso ti porta nei luoghi che hanno messo Münster sotto i riflettori dei media o nei posti nascosti dietro foto e video.",
-    "route.7": "Conosci già Münster a menadito? Questo percorso ti mostra luoghi speciali di cui anche molti esperti di Münster non sono a conoscenza. Curioso?"
+    "route.7": "Conosci già Münster a menadito? Questo percorso ti mostra luoghi speciali di cui anche molti esperti di Münster non sono a conoscenza. Curioso?",
+
+"help.title": "Aiuto e FAQ",
+"help.subtitle": "Qui trovi le risposte alle tue domande.",
+"help.intro_text": "Benvenuto nella sezione di aiuto di Münster Discovery. Abbiamo raccolto le informazioni più importanti per aiutarti a orientarti nell’app ed esplorare Münster nel modo migliore.",
+"help.faq_title": "Domande frequenti",
+"help.faq.q1": "Che cos’è Münster Discovery?",
+"help.faq.a1": "Münster Discovery è un’app interattiva con cui puoi esplorare la città di Münster in modi nuovi. Scopri luoghi nascosti, impara fatti storici e ottieni obiettivi.",
+"help.faq.q2": "Come avvio un percorso?",
+"help.faq.a2": "Nel menu principale vai su 'Selezione percorsi'. Lì vedrai diversi percorsi tematici (ad es. Münster History). Scegline uno per vedere i dettagli e avviare la navigazione.",
+"help.faq.q3": "Chi è Ridey?",
+"help.faq.a3": "Ridey è la nostra mascotte e il tuo compagno personale! Reagisce al tuo umore e ti dà consigli sui luoghi da visitare. Puoi anche chattare con lui.",
+"help.faq.q4": "Come ottengo gli obiettivi?",
+"help.faq.a4": "Ottieni obiettivi quando visiti determinati luoghi, completi percorsi o svolgi attività speciali nell’app. Controlla il tuo profilo per vedere i tuoi progressi.",
+"help.still_questions": "Hai altre domande?",
+"help.contact_support": "Contatta il supporto",
+"imprint.legal_note": "Informazioni ai sensi del § 5 TMG",
+"imprint.contact_label": "Contatto",
+"imprint.represented_by": "Rappresentato da",
+"imprint.disclaimer_title": "Esclusione di responsabilità",
+"imprint.disclaimer_text": "Abbiamo creato i contenuti delle nostre pagine con la massima cura. Tuttavia, non possiamo garantire l’accuratezza, la completezza e l’attualità dei contenuti. In qualità di fornitore di servizi, siamo responsabili dei nostri contenuti su queste pagine ai sensi del § 7(1) TMG e delle leggi generali.",
+"imprint.copyright_title": "Diritto d’autore",
+"imprint.copyright_text": "I contenuti e le opere creati dagli operatori del sito su queste pagine sono soggetti al diritto d’autore tedesco. Qualsiasi riproduzione, modifica, distribuzione o utilizzo oltre i limiti della legge sul diritto d’autore richiede il consenso scritto dell’autore o del creatore."
+
 
 
 
