--- a/muensterdiscovery/src/i18n/jp.json
+++ b/muensterdiscovery/src/i18n/jp.json
@@ -303,7 +303,30 @@
     "route.4": "建築に興味がありますか？このルートでは、歴史的建造物と現代建築を組み合わせ、異なる時代がミュンスターの街並みにどのような影響を与えたかを示します。",
     "route.5": "人気で活気のあるクロイツヴィーテル地区：このルートでは、住宅文化と歴史、建築が融合する特別な通りや場所を紹介します。地区の特徴を感じられる旅です。",
     "route.6": "犯罪現場の撮影やインターネットミーム——このルートでは、メディアで注目された場所や、写真や動画の裏に隠れたスポットを訪れます。",
-    "route.7": "ミュンスターをすでに知り尽くしていますか？このルートでは、多くのミュンスター専門家でさえ知らない特別な場所を紹介します。好奇心をそそられますね？"
+    "route.7": "ミュンスターをすでに知り尽くしていますか？このルートでは、多くのミュンスター専門家でさえ知らない特別な場所を紹介します。好奇心をそそられますね？",
+
+    "help.title": "ヘルプ＆FAQ",
+"help.subtitle": "よくある質問への回答はこちらです。",
+"help.intro_text": "Münster Discovery のヘルプセクションへようこそ。アプリの使い方が分かりやすくなり、ミュンスターをより快適に探索できるように、重要な情報をまとめました。",
+"help.faq_title": "よくある質問",
+"help.faq.q1": "Münster Discovery とは何ですか？",
+"help.faq.a1": "Münster Discovery は、ミュンスターの街を新しい方法で探索できるインタラクティブなアプリです。隠れたスポットを見つけ、歴史的な事実を学び、実績を獲得できます。",
+"help.faq.q2": "ルートはどうやって開始しますか？",
+"help.faq.a2": "メインメニューから「ルート選択」に進んでください。そこにテーマ別のルート（例：Münster History）が表示されます。1つ選ぶと詳細を確認でき、ナビゲーションを開始できます。",
+"help.faq.q3": "Ridey とは誰ですか？",
+"help.faq.a3": "Ridey は私たちのマスコットで、あなたのパーソナルコンパニオンです。気分に反応し、見どころのヒントをくれます。チャットすることもできます。",
+"help.faq.q4": "実績（Achievements）はどうやって集めますか？",
+"help.faq.a4": "特定の場所を訪れたり、ルートを完走したり、アプリ内の特別なタスクを達成すると実績を獲得できます。進捗はプロフィールで確認できます。",
+"help.still_questions": "ほかに質問はありますか？",
+"help.contact_support": "サポートに連絡する",
+"imprint.legal_note": "§ 5 TMG に基づく情報",
+"imprint.contact_label": "連絡先",
+"imprint.represented_by": "代表者",
+"imprint.disclaimer_title": "免責事項",
+"imprint.disclaimer_text": "当サイトの内容は細心の注意を払って作成していますが、その正確性・完全性・最新性について保証するものではありません。サービス提供者として、§ 7(1) TMG および一般法に従い、本ページ上の自社コンテンツについて責任を負います。",
+"imprint.copyright_title": "著作権",
+"imprint.copyright_text": "本ページの運営者が作成したコンテンツおよび著作物はドイツ著作権法の対象です。著作権法の範囲を超える複製、編集、配布その他の利用には、各著作者または作成者の書面による許可が必要です。"
+
 
 
 }
