--- a/muensterdiscovery/src/i18n/nl.json
+++ b/muensterdiscovery/src/i18n/nl.json
@@ -290,7 +290,30 @@
     "route.4": "Ben je geïnteresseerd in architectuur? Deze route combineert historische gebouwen met moderne architectuur en toont je hoe verschillende tijdperken het stadsbeeld van Münster hebben gevormd.",
     "route.5": "Populair en levendig: de Kreuzviertel-wijk combineert wooncultuur en geschiedenis evenals architectuur. Deze route toont je bijzondere straten en plaatsen die het karakter van de wijk bepalen.",
     "route.6": "Of het nu een misdaadscène-achtergrond is of een internetmeme - deze route brengt je naar de plaatsen die Münster in de media-aandacht hebben gebracht of de verborgen locaties achter mediafoto's en -video's.",
-    "route.7": "Ken je Münster al van binnen en van buiten? Deze route toont je bijzondere plaatsen waar zelfs veel Münster-experts niet van op de hoogte zijn. Nieuwsgierig?"
+    "route.7": "Ken je Münster al van binnen en van buiten? Deze route toont je bijzondere plaatsen waar zelfs veel Münster-experts niet van op de hoogte zijn. Nieuwsgierig?",
+
+"help.title": "Hulp & FAQ",
+"help.subtitle": "Hier vind je antwoorden op je vragen.",
+"help.intro_text": "Welkom in het helpgedeelte van Münster Discovery. We hebben de belangrijkste informatie verzameld zodat je je weg vindt in de app en Münster zo goed mogelijk kunt verkennen.",
+"help.faq_title": "Veelgestelde vragen",
+"help.faq.q1": "Wat is Münster Discovery?",
+"help.faq.a1": "Münster Discovery is een interactieve app waarmee je de stad Münster op nieuwe manieren kunt ontdekken. Ontdek verborgen plekken, leer historische feiten en verdien achievements.",
+"help.faq.q2": "Hoe start ik een route?",
+"help.faq.a2": "Ga in het hoofdmenu naar 'Route selectie'. Daar zie je verschillende themaroutes (bijv. Münster History). Kies er één om details te bekijken en de navigatie te starten.",
+"help.faq.q3": "Wie is Ridey?",
+"help.faq.a3": "Ridey is onze mascotte en jouw persoonlijke metgezel! Hij reageert op je stemming en geeft tips over bezienswaardigheden. Je kunt ook met hem chatten.",
+"help.faq.q4": "Hoe verdien ik achievements?",
+"help.faq.a4": "Je verdient achievements wanneer je bepaalde plekken bezoekt, routes voltooit of speciale taken in de app uitvoert. Kijk op je profiel om je voortgang te zien.",
+"help.still_questions": "Heb je nog vragen?",
+"help.contact_support": "Neem contact op met onze support",
+"imprint.legal_note": "Informatie volgens § 5 TMG",
+"imprint.contact_label": "Contact",
+"imprint.represented_by": "Vertegenwoordigd door",
+"imprint.disclaimer_title": "Disclaimer",
+"imprint.disclaimer_text": "We hebben de inhoud van onze pagina’s met grote zorg samengesteld. Toch kunnen we geen garantie geven voor de juistheid, volledigheid en actualiteit van de inhoud. Als dienstverlener zijn wij verantwoordelijk voor onze eigen inhoud op deze pagina’s overeenkomstig § 7(1) TMG en de algemene wetten.",
+"imprint.copyright_title": "Auteursrecht",
+"imprint.copyright_text": "De inhoud en werken die door de beheerders van deze site op deze pagina’s zijn gemaakt, vallen onder het Duitse auteursrecht. Iedere vermenigvuldiging, bewerking, verspreiding of andere vorm van gebruik buiten de grenzen van het auteursrecht vereist schriftelijke toestemming van de betreffende auteur of maker."
+
 
 
 }
