--- a/muensterdiscovery/src/i18n/ru.json
+++ b/muensterdiscovery/src/i18n/ru.json
@@ -291,7 +291,29 @@
     "route.4": "Вас интересует архитектура? Этот маршрут сочетает исторические здания с современной архитектурой и показывает вам, как разные эпохи сформировали городской пейзаж Мюнстера.",
     "route.5": "Популярный и оживлённый: квартал Кройцфиртель сочетает жилую культуру и историю, а также архитектуру. Этот маршрут показывает вам особые улицы и места, которые определяют характер квартала.",
     "route.6": "Будь то фон места преступления или интернет-мем - этот маршрут ведёт вас к местам, которые поставили Мюнстер в центр внимания СМИ, или к скрытым местам за медийными фотографиями и видео.",
-    "route.7": "Вы уже знаете Мюнстер вдоль и поперёк? Этот маршрут показывает вам особые места, о которых даже многие эксперты Мюнстера не знают. Любопытно?"
+    "route.7": "Вы уже знаете Мюнстер вдоль и поперёк? Этот маршрут показывает вам особые места, о которых даже многие эксперты Мюнстера не знают. Любопытно?",
+
+"help.title": "Помощь и FAQ",
+"help.subtitle": "Здесь вы найдёте ответы на свои вопросы.",
+"help.intro_text": "Добро пожаловать в раздел помощи Münster Discovery. Мы собрали здесь самую важную информацию, чтобы вы могли легко ориентироваться в приложении и как можно лучше исследовать Мюнстер.",
+"help.faq_title": "Часто задаваемые вопросы",
+"help.faq.q1": "Что такое Münster Discovery?",
+"help.faq.a1": "Münster Discovery — это интерактивное приложение, с которым вы можете по-новому исследовать город Мюнстер. Открывайте скрытые места, узнавайте исторические факты и получайте достижения.",
+"help.faq.q2": "Как начать маршрут?",
+"help.faq.a2": "В главном меню выберите «Выбор маршрута». Там вы увидите различные тематические маршруты (например, Münster History). Выберите один, чтобы посмотреть детали и начать навигацию.",
+"help.faq.q3": "Кто такой Ridey?",
+"help.faq.a3": "Ridey — наш талисман и ваш личный спутник! Он реагирует на ваше настроение и даёт советы о достопримечательностях. Вы также можете с ним чатиться.",
+"help.faq.q4": "Как получить достижения?",
+"help.faq.a4": "Вы получаете достижения, когда посещаете определённые места, завершаете маршруты или выполняете специальные задания в приложении. Посмотрите в профиле, чтобы увидеть свой прогресс.",
+"help.still_questions": "Остались вопросы?",
+"help.contact_support": "Связаться со службой поддержки",
+"imprint.legal_note": "Информация в соответствии с § 5 TMG",
+"imprint.contact_label": "Контакты",
+"imprint.represented_by": "Представлено",
+"imprint.disclaimer_title": "Отказ от ответственности",
+"imprint.disclaimer_text": "Мы создавали содержание наших страниц с максимальной тщательностью. Однако мы не можем гарантировать точность, полноту и актуальность содержания. Как поставщик услуг мы несём ответственность за собственный контент на этих страницах в соответствии с § 7(1) TMG и общими законами.",
+"imprint.copyright_title": "Авторское право",
+"imprint.copyright_text": "Содержимое и работы, созданные операторами сайта на этих страницах, подпадают под действие немецкого авторского права. Любое воспроизведение, обработка, распространение или использование за пределами авторского права требует письменного согласия соответствующего автора или создателя."
 
 
 }
