--- a/muensterdiscovery/src/i18n/sa.json
+++ b/muensterdiscovery/src/i18n/sa.json
@@ -291,7 +291,30 @@
     "route.4": "هل تهتم بالعمارة؟ تجمع هذه الجولة بين المباني التاريخية والعمارة الحديثة وتوضح كيف شكلت العصور المختلفة مشهد مدينة مونستر.",
     "route.5": "حي نابض بالحياة. يجمع كرويتسفيرتل بين ثقافة السكن والتاريخ والعمارة. تعرض هذه الجولة شوارع واماكن تميز طابع الحي.",
     "route.6": "سواء كان موقع تصوير جريمة او ميم على الانترنت، تاخذك هذه الجولة الى اماكن سلطت الاضواء الاعلامية على مونستر وكذلك الى مواقع مخفية خلف الصور ومقاطع الفيديو.",
-    "route.7": "هل تعتقد انك تعرف مونستر جيدا؟ تعرض هذه الجولة اماكن خاصة لا يعرفها حتى الكثير من خبراء مونستر. هل انت فضولي؟"
+    "route.7": "هل تعتقد انك تعرف مونستر جيدا؟ تعرض هذه الجولة اماكن خاصة لا يعرفها حتى الكثير من خبراء مونستر. هل انت فضولي؟",
+
+    "help.title": "المساعدة والأسئلة الشائعة",
+    "help.subtitle": "هنا ستجد إجابات لأسئلتك.",
+    "help.intro_text": "مرحبًا بك في قسم المساعدة الخاص بـ Münster Discovery. جمعنا أهم المعلومات لمساعدتك على استخدام التطبيق بسهولة واستكشاف مونستر بأفضل طريقة ممكنة.",
+    "help.faq_title": "الأسئلة الشائعة",
+    "help.faq.q1": "ما هو Münster Discovery؟",
+    "help.faq.a1": "Münster Discovery هو تطبيق تفاعلي يتيح لك استكشاف مدينة مونستر بطرق جديدة. اكتشف أماكن مخفية، وتعرّف على حقائق تاريخية، واحصل على إنجازات.",
+    "help.faq.q2": "كيف أبدأ مسارًا؟",
+    "help.faq.a2": "من القائمة الرئيسية انتقل إلى 'اختيار المسار'. ستجد هناك مسارات主题ية مختلفة (مثل Münster History). اختر مسارًا لعرض التفاصيل وبدء التنقل.",
+    "help.faq.q3": "من هو Ridey؟",
+    "help.faq.a3": "Ridey هو تميمنا ورفيقك الشخصي! يتفاعل مع مزاجك ويقدم لك نصائح حول المعالم. يمكنك أيضًا الدردشة معه.",
+    "help.faq.q4": "كيف أجمع الإنجازات؟",
+    "help.faq.a4": "تحصل على الإنجازات عندما تزور أماكن معينة، أو تُنهي مسارات، أو تُكمل مهام خاصة داخل التطبيق. تحقق من ملفك الشخصي لمعرفة تقدمك.",
+    "help.still_questions": "هل لديك أسئلة أخرى؟",
+    "help.contact_support": "تواصل مع الدعم",
+    "imprint.legal_note": "معلومات وفقًا للمادة § 5 من TMG",
+    "imprint.contact_label": "جهة الاتصال",
+    "imprint.represented_by": "يمثله",
+    "imprint.disclaimer_title": "إخلاء المسؤولية",
+    "imprint.disclaimer_text": "تم إعداد محتوى صفحاتنا بعناية كبيرة. ومع ذلك، لا يمكننا ضمان دقة المحتوى أو اكتماله أو حداثته. وبصفتنا مزود خدمة، نتحمل مسؤولية المحتوى الخاص بنا على هذه الصفحات وفقًا للمادة § 7(1) من TMG والقوانين العامة.",
+    "imprint.copyright_title": "حقوق النشر",
+    "imprint.copyright_text": "تخضع المحتويات والأعمال التي ينشئها مشغلو الموقع في هذه الصفحات لقانون حقوق النشر الألماني. أي نسخ أو تعديل أو توزيع أو استخدام خارج حدود قانون حقوق النشر يتطلب موافقة خطية من المؤلف أو المنشئ المعني."
+
 
 
 }
